--- a/webhtml/aboutus.html
+++ b/webhtml/aboutus.html
@@ -15,9 +15,9 @@
 
 <body>
 <!-- Header -->
-	<h1>
+	<!-- <h1>
         test
-    </h1>
+    </h1> -->
 	<div id="Top-header">
 		<header>About Us</header>
         <h1>Diabetes, who cares? We care.</h1>
@@ -59,26 +59,28 @@
 <!-- Footer Start  -->
     <div id="foot">
         <div id="foot-left">
-            <p><a href="#">About Us<br></p>
-            <p><a href="#">Privacy Policy<br></p>
-            <p><a href="#">Data Transparency<br></p>
-            <p><a href="#">Source Acknowledgement<br></p>
+            <p><a href="#">About Us<br>
+                <br>
+            <a href="#">Privacy Policy<br>
+                <br>
+            <a href="#">Data Transparency<br>
+                <br>
+            <a href="#">Source Acknowledgement<br>
+            </p>
         </div>
-
         <div id="foot-right">
             <p class ="footer title">
                 Find Us
             </p>
-             
             <p class="social_media">
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-twitter-square"></i>
+                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a>
             </p>
         </div>
-    </div>
-    <div id="copyright">
-        <p>© Copyright 2022 Team Glucope Melbourne All Rights Reserved</p>
+        <div id="copyright">
+            <p>© Copyright 2022 Team Glucope Melbourne All Rights Reserved</p>
+        </div>
     </div>
     
 </body>
