--- a/webhtml 3.24/aboutdiabetes.html
+++ b/webhtml 3.24/aboutdiabetes.html
@@ -4,32 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- reset css -->
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-
 
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/font.css" />
+    <link rel="stylesheet" type="text/css" href="css/color.css" />
+
+
 
     <script src="https://kit.fontawesome.com/c83b823ada.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title id="Top-header">About Diabetes</title>
 
 </head>
 <body>
     <div id="Top-header">
-        <header>What is diabetes?</header>
+        <header>What is</header>
+        <header>diabetes?</header>
         <p>A condition defined by high blood glucose resulting from defects in insulin secretion, insulin action or both.</p>
+        <br></br>
         <p>It could be divided into three different categories which are: </p>
         <div id="top-middle">
             <p><a href="#type1" style="text-decoration: none">1. Type 1</a></p>
             <p><a href="#type2" style="text-decoration: none">2. Type 2</a></p>
-            <p><a href="#Gestational-Diabetes" style="text-decoration: none">3. Gestational</a></p>
+            <p><a href="#Gestational Diabetes" style="text-decoration: none">3. Gestational</a></p>
         </div>
-        <iframe width="260" height="280" src="https://www.youtube.com/embed/wZAjVQWbMlE" 
+        <iframe width="290" height="280" src="https://www.youtube.com/embed/wZAjVQWbMlE" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -48,26 +51,26 @@
     <div id="bottom-part">
         <header>How to Cope<br>
             with Diabetes?</header>
-        <p>Relax Your Mind</p>
-        <p>Stress can raise your blood sugar. Learn ways to<br>
-            lower your stress. Try deep breathing, gardening, <br>
-            taking a walk, meditating, working on your hobby,<br>
+        <p class="small-title">Relax Your Mind</p>
+        <p>Stress can raise your blood sugar. Learn ways to
+            lower your stress. Try deep breathing, gardening, 
+            taking a walk, meditating, working on your hobby,
             or listening to your favorite music.</p>
-        <p>Ask for help if you feel down. A mental health<br>
-            counselor, support group, member of the clergy, <br>
-            friend, or family member who will listen to your <br>
+        <p>Ask for help if you feel down. A mental health
+            counselor, support group, member of the clergy, 
+            friend, or family member who will listen to your 
             concerns may help you feel better.</p>
 
         <!-- eat well part -->
         <p class="small-title">Eat Well</p>
         <p>Make a diabetes meal plan with help from your health care team.</p>
         <img src="images/aboutdiabetespicture2.png" id="eat_image" class="image">
-        <p>Choose foods that are lower in calories, saturated<br>
+        <p>Choose foods that are lower in calories, saturated 
             fat, trans fat, sugar, and salt.</p>
-        <p>Eat foods with more fiber, such as whole grain<br>
+        <p>Eat foods with more fiber, such as whole grain
             cereals, breads, crackers, rice, or pasta.</p>
-        <p>Choose foods such as fruits, vegetables, whole <br>
-            grains, bread and cereals, and low-fat or skim milk<br>
+        <p>Choose foods such as fruits, vegetables, whole 
+            grains, bread and cereals, and low-fat or skim milk
             and cheese.</p>
         <p>Drink water instead of juice and regular soda.</p>
 
@@ -75,35 +78,38 @@
 
         <!-- exercise part -->
         <p class="small-title">Exercise</p>
-        <p>It’s never too late to reap the<br> 
-            benefits of exercise, whether you’re<br>
+        <p>It’s never too late to reap the 
+            benefits of exercise, whether you’re
             45 or 95. First of all, it simply makes you feel good to move. 
         </p>
         <br>
         <img src="images/exercise.png" class="image">
-        <p>By becoming more active, you can also lower your<br>
+        <p>By becoming more active, you can also lower your
             blood sugar to keep diabetes under control.
         </p>
-        <p>“You don’t need to run a marathon to get results,” <br>
-            says Dawn Sherr, RD, of the American Association<br>
-            of Diabetes Educators. “Walking, swimming, and <br>
-            playing with the grandkids are all great ways to get <br>
+        <p>“You don’t need to run a marathon to get results,” 
+            says Dawn Sherr, RD, of the American Association
+            of Diabetes Educators. “Walking, swimming, and 
+            playing with the grandkids are all great ways to get 
             exercise.”
         </p>
     </div>
+
     <!-- tips super link -->
     <div id="tips-part">
         <p>Useful Tips</p>
         <p><a href="https://www.diabetes.org.uk/guide-to-diabetes/enjoy-food/eating-with-diabetes/10-ways-to-eat-well-with-diabetes"
-            style="text-decoration: none">1. 10 tips for healthy eating</a></p>
+            >1. 10 tips for healthy eating</a></p>
         <p><a href="https://www.diabetes.co.uk/The-big-three-diabetes-signs-and-symptoms.html"
-            style="text-decoration: none">2. 3 main sign of diabetes</a></p>
-        <p><a href="https://www.mayoclinic.org/diseases-conditions/type-2-diabetes/in-depth/diabetes-prevention/art-20047639"
-            style="text-decoration: none">3. 5 tips for diabetes prevention.</a></p>
+            >2. 3 main sign of diabetes</a></p>
+        <p><a href="https://www.mayoclinic.org/diseases-conditions/type-2-diabetes/in-depth/diabetes-prevention/art-20047639)"
+            >3. 5 tips for diabetes prevention</a></p>
         <p><a href="https://www.hsph.harvard.edu/nutritionsource/disease-prevention/diabetes-prevention/preventing-diabetes-full-story/"
-            style="text-decoration: none">4. Food can prevent diabetes !</a></p>
+            >4. Food can prevent diabetes</a></p>
         <p><a href="https://www.healthline.com/health-news/food-four-food-groups-that-raise-diabetes-risk-111313"
-            style="text-decoration: none">5. Food can cause diabetes !</a></p>
+            >5. Food can cause diabetes</a></p>
+        <br>
+        <br>
     </div>
 
 <!-- Context Ends -->
@@ -111,12 +117,13 @@
 <div id="foot">
     <div id="foot-left">
         <p><a href="#" style="text-decoration: none">About Us<br>
-            <br>
+
         <a href="#" style="text-decoration: none">Privacy Policy<br>
-            <br>
+
         <a href="#" style="text-decoration: none">Data Transparency<br>
-            <br>
+
         <a href="#" style="text-decoration: none">Source Acknowledgement<br>
+            <br>
         </p>
     </div>
     <div id="foot-right">
@@ -129,6 +136,7 @@
             <a href="https://www.twitter.com/" style="text-decoration: none"><i class="fab fa-twitter-square"></i></a>
         </p>
     </div>
+    
     <div id="copyright">
         <p>© Copyright 2022 Team Glucope Melbourne All Rights Reserved</p>
     </div>
